// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate graphqlSchemaFromSQLSchema creates graphql schema from "mysql" "news" schema 1`] = `
"input AMPLIFY {
 engine: String = \\"mysql\\"  
}


type Article @refersTo(name: \\"articles\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"A\\")
  placeholder: String!
}

type Comment @refersTo(name: \\"comments\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"commentTimestamp\\", \\"commenterEmail\\"])
  commentTimestamp: AWSDateTime! @refersTo(name: \\"comment_timestamp\\") @default(value: \\"CURRENT_TIMESTAMP\\")
  commenterEmail: String! @refersTo(name: \\"commenter_email\\")
  commentText: String! @refersTo(name: \\"comment_text\\")
}

type Publication @refersTo(name: \\"publications\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey @index(name: \\"publications_superkey\\", sortKeyFields: [\\"pubType\\"])
  pubType: String @refersTo(name: \\"pub_type\\")
  pubUrl: String! @refersTo(name: \\"pub_url\\") @index(name: \\"pub_url\\")
}

type Story @refersTo(name: \\"stories\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"S\\")
  placeholder: String!
}
"
`;

exports[`generate graphqlSchemaFromSQLSchema creates graphql schema from "mysql" "newsNameChange" schema 1`] = `
"input AMPLIFY {
 engine: String = \\"mysql\\"  
}


type Article @refersTo(name: \\"articles\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"A\\")
  placeholder: String!
}

type Comment @refersTo(name: \\"comments\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"commentTimestamp\\", \\"commenterEmail\\"])
  commentTimestamp: AWSDateTime! @refersTo(name: \\"comment_timestamp\\") @default(value: \\"CURRENT_TIMESTAMP\\")
  commenterEmail: String! @refersTo(name: \\"commenter_email\\")
  commentText: String! @refersTo(name: \\"comment_text\\")
}

type Pub @refersTo(name: \\"pub\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey @index(name: \\"publications_superkey\\", sortKeyFields: [\\"pubType\\"])
  pubType: String @refersTo(name: \\"pub_type\\")
  pubUrl: String! @refersTo(name: \\"pub_url\\") @index(name: \\"pub_url\\")
}

type Story @refersTo(name: \\"stories\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"S\\")
  placeholder: String!
}
"
`;

exports[`generate graphqlSchemaFromSQLSchema creates graphql schema from "mysql" "todo" schema 1`] = `
"input AMPLIFY {
 engine: String = \\"mysql\\"  
}


type Todo @model {
  id: Int! @primaryKey
  title: String!
  startDate: AWSDate @refersTo(name: \\"start_date\\")
  dueDate: AWSDate @refersTo(name: \\"due_date\\")
}
"
`;

exports[`generate graphqlSchemaFromSQLSchema creates graphql schema from "postgres" "news" schema 1`] = `
"input AMPLIFY {
 engine: String = \\"postgres\\"  
}


type Article @refersTo(name: \\"articles\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"'A'::bpchar\\")
  placeholder: String!
}

type Comment @refersTo(name: \\"comments\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"commentTimestamp\\", \\"commenterEmail\\"])
  commentTimestamp: AWSDateTime! @refersTo(name: \\"comment_timestamp\\")
  commenterEmail: String! @refersTo(name: \\"commenter_email\\")
}

type Publication @refersTo(name: \\"publications\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey @index(name: \\"fake_pkey\\", sortKeyFields: [\\"pubType\\"])
  pubType: String @refersTo(name: \\"pub_type\\")
  pubUrl: String! @refersTo(name: \\"pub_url\\") @index(name: \\"publications_pub_url_key\\")
}

type Story @refersTo(name: \\"stories\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"'S'::bpchar\\")
  placeholder: String!
}
"
`;

exports[`generate graphqlSchemaFromSQLSchema creates graphql schema from "postgres" "newsNameChange" schema 1`] = `
"input AMPLIFY {
 engine: String = \\"postgres\\"  
}


type Article @refersTo(name: \\"articles\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"'A'::bpchar\\")
  placeholder: String!
}

type Comment @refersTo(name: \\"comments\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"commentTimestamp\\", \\"commenterEmail\\"])
  commentTimestamp: AWSDateTime! @refersTo(name: \\"comment_timestamp\\")
  commenterEmail: String! @refersTo(name: \\"commenter_email\\")
}

type Pub @refersTo(name: \\"pub\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey @index(name: \\"fake_pkey\\", sortKeyFields: [\\"pubType\\"])
  pubType: String @refersTo(name: \\"pub_type\\")
  pubUrl: String! @refersTo(name: \\"pub_url\\") @index(name: \\"publications_pub_url_key\\")
}

type Story @refersTo(name: \\"stories\\") @model {
  pubId: Int! @refersTo(name: \\"pub_id\\") @primaryKey(sortKeyFields: [\\"pubType\\"])
  pubType: String! @refersTo(name: \\"pub_type\\") @default(value: \\"'S'::bpchar\\")
  placeholder: String!
}
"
`;

exports[`generate graphqlSchemaFromSQLSchema creates graphql schema from "postgres" "serial" schema 1`] = `
"input AMPLIFY {
 engine: String = \\"postgres\\"  
}


type SerialTable @refersTo(name: \\"      serial_table\\") @model {
  id: Int! @primaryKey
  number: Int
}
"
`;

exports[`generate graphqlSchemaFromSQLSchema creates graphql schema from "postgres" "todo" schema 1`] = `
"input AMPLIFY {
 engine: String = \\"postgres\\"  
}


type Todo @refersTo(name: \\"todo\\") @model {
  id: Int! @primaryKey
  title: String!
  startDate: AWSDate @refersTo(name: \\"start_date\\")
  dueDate: AWSDate @refersTo(name: \\"due_date\\")
}
"
`;
